<resources>
    <string name="app_name">JawaPos3</string>
    <string name="var_contdesc">constdesc</string>
    <string name="terbaru">Terbaru</string>
    <string name="seputar_berita">Seputar Berita</string>
    <string name="covid_19">Covid-19</string>
    <string name="kabar_luar">Kabar Luar</string>
    <string name="sport">Sport</string>
    <string name="home">home</string>
    <string name="cart">cart</string>
    <string name="library">library</string>
    <string name="account">account</string>
    <string name="judul_headline">Game Among Us Dongkrak Unduhan Discord</string>
    <string name="deskripsi_headline">jawapos, 11 Agustus 2020 12:40</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione cumque placeat obcaecati ipsa exercitationem! Delectus tempore expedita sunt quasi suscipit ullam est, voluptate similique inventore ipsa aliquam quisquam fuga eum. Cumque rem labore quibusdam ipsum inventore aliquam nulla sequi ex rerum, provident molestias quaerat sint, sed maiores odio atque aspernatur dolorum eveniet accusamus porro facilis eum aut repellendus illo? Praesentium aspernatur voluptatum debitis non soluta consectetur quae molestias consequuntur, inventore voluptatibus deserunt consequatur mollitia dolor. Culpa quia facilis quam sunt repudiandae dolore accusamus, consequatur maxime id? Quas, voluptate earum quos, illum praesentium explicabo dolorem eaque distinctio quaerat id rem excepturi illo. Odit animi vitae in sapiente reiciendis. Nihil aut laborum numquam porro fugit ab dignissimos sint sunt eos placeat id exercitationem deserunt accusamus distinctio hic beatae ad cum debitis voluptas, nostrum, ratione ex laudantium animi quisquam. Ipsum inventore quaerat ut, aliquam velit doloremque modi amet obcaecati non id eos illum voluptatum accusantium quia atque cum quod voluptas a eaque unde? Molestiae ratione nemo quos sit deserunt totam aperiam, molestias et! Amet expedita illum rem iste omnis doloremque dolores ullam numquam quo dolorum reprehenderit earum unde, quae dicta in soluta! Impedit repellat quibusdam esse modi quod fuga iusto dignissimos cumque aliquid alias reprehenderit commodi soluta excepturi facere nihil nemo, dolorum est nam ad architecto, quam suscipit. Et, obcaecati dicta! Cupiditate veniam similique cum, nihil quam quo fugiat adipisci, doloremque autem vitae repudiandae. Corrupti, neque? Repudiandae delectus eum nemo quos dolor? Soluta veniam, distinctio quia natus tempora enim corrupti laboriosam recusandae nesciunt quasi quidem iste molestiae officia eaque dicta sapiente excepturi reiciendis fugit perspiciatis. Obcaecati qui, earum maiores iure totam impedit nulla quos neque? Esse nisi impedit rerum officiis quod atque doloribus iusto corrupti sed dicta animi recusandae minima expedita velit temporibus, nam quo perferendis praesentium voluptatum. Illo, voluptas. Rem repellendus eum deleniti inventore neque quis ipsa tenetur, ipsam dicta corporis recusandae deserunt, animi, dolores sint maxime quas libero reprehenderit. Incidunt excepturi qui itaque dolorum hic fugit adipisci nam magnam odit nesciunt temporibus quidem voluptate, dolore ipsam, architecto enim vitae dignissimos optio quas cum in similique corrupti numquam rerum. Voluptatibus aspernatur enim placeat deserunt quaerat! Placeat, quis dolores corporis voluptatum mollitia dicta debitis perferendis officia? Ullam id distinctio asperiores temporibus labore aspernatur consectetur pariatur iusto eius neque, ea deleniti modi nisi, inventore possimus nulla. Sunt delectus qui reiciendis, nam magnam nostrum in, voluptatem perferendis nemo maxime deleniti doloribus vero! Commodi provident fuga laborum illum beatae consequatur iste, repellendus alias, ipsa, exercitationem suscipit magnam? Illo vel laborum nostrum, tenetur repudiandae rem amet excepturi quasi, similique quis totam labore eligendi perferendis vero saepe, esse neque voluptate cupiditate sequi. Ex dolor quibusdam facere nulla quod at dolores ullam, dolorem voluptates qui voluptate eius tempora nemo, placeat corporis doloremque enim reiciendis non architecto inventore sequi? Dignissimos amet aut culpa voluptatibus, nesciunt cupiditate exercitationem eos eligendi. Temporibus, vitae impedit? Excepturi est sit debitis officia inventore minus aliquam dolorem, quod, omnis quo quae incidunt id. Soluta asperiores aut molestiae consequatur, eaque perferendis illum numquam sint facilis aliquam eligendi, repellat dicta quae ipsam nobis dolore laboriosam maxime deleniti est corrupti, voluptatum impedit quia! Harum odio natus nostrum impedit soluta distinctio ea veritatis libero, dolor repudiandae, maxime cupiditate obcaecati eveniet fuga a quae? Nulla, sit error. Mollitia soluta sint in aliquam repudiandae nemo dolor sapiente culpa blanditiis error laboriosam numquam vero facilis ex repellendus illum a obcaecati, possimus fugiat! Asperiores cumque minima error nesciunt consequatur fugiat, officia, quae tempora odio sint animi nulla doloribus exercitationem sapiente quasi magni a quos omnis nemo iusto. Sint delectus dignissimos cum fuga quidem totam explicabo recusandae natus possimus. Voluptatem minima corrupti suscipit et quo velit atque, porro libero excepturi. Earum molestiae porro repudiandae quidem optio praesentium deleniti atque recusandae blanditiis cupiditate minus, odio quibusdam, quod deserunt! Labore a cupiditate quod quia temporibus, placeat omnis. Explicabo, iste suscipit qui blanditiis illum at corrupti eius distinctio ipsum ratione reiciendis quaerat sint ullam eveniet aperiam debitis earum repellat modi ad expedita. Nobis voluptas laborum, reiciendis velit laudantium impedit corporis expedita, molestiae magnam nesciunt commodi illum? Ratione incidunt quae voluptatum maxime! Similique alias quas asperiores ducimus placeat doloribus quos, reprehenderit eum ad dolore totam quibusdam tempora sapiente velit praesentium. Accusamus eum cumque dicta atque minus cupiditate rem quo ut aliquid eligendi cum, explicabo tempora minima repellat sequi iure dolores aspernatur beatae mollitia culpa. Reiciendis doloremque doloribus aliquid! Dignissimos nemo assumenda, totam veniam ut id eaque labore sequi sapiente dolore dicta illo libero, doloremque nostrum ab voluptatibus? Possimus magnam voluptatem pariatur, assumenda error facere, dicta quisquam nam enim modi quod eveniet dolore. Totam officia quaerat molestias quis deleniti iure reiciendis amet earum eligendi officiis odit tempora cum esse, nulla molestiae necessitatibus sapiente, iste in, ullam nam inventore veritatis vel! Iste officiis ipsa, deserunt illum blanditiis unde obcaecati ipsum aut enim impedit ullam, quos atque esse. Nobis, quam harum perspiciatis consectetur saepe asperiores necessitatibus animi dolore nulla nihil incidunt, suscipit recusandae dicta expedita similique vitae eveniet unde adipisci neque ad dolorum dolorem, et facere? Recusandae vitae tenetur vel fuga eaque voluptatum, id suscipit blanditiis cumque incidunt praesentium dolor cum totam, deleniti enim, maxime voluptatem est! Consequuntur, corporis quasi. Unde iusto deleniti blanditiis. Sequi doloribus corrupti totam perferendis? At ea deserunt numquam amet placeat possimus repellendus maxime illum consequuntur aspernatur, nesciunt tempora alias autem molestiae mollitia. Obcaecati vitae quibusdam error assumenda neque deleniti necessitatibus quisquam doloremque dolorum voluptate omnis culpa, incidunt corrupti quam quae ea iure eos autem, nostrum maxime optio officiis fugit. Fugit minima reiciendis incidunt nemo perspiciatis qui. Ut dolores alias nobis officiis adipisci iusto distinctio saepe officia odit odio quam tenetur consequatur, quidem reprehenderit cumque magni doloremque culpa neque fuga molestias dolorum asperiores omnis. Quas architecto explicabo illo similique necessitatibus animi inventore nemo eligendi velit mollitia est, ab magnam rem? Rerum officia corrupti odit distinctio commodi eaque soluta natus laboriosam quia. Fugiat, repellendus illum! Dolores quo maxime totam, quis ipsa molestias excepturi similique nulla enim doloribus esse quae, minima magni. Eum corrupti debitis rem culpa assumenda expedita eius vitae, dolor ut obcaecati, quas quam magnam, dolores quae? Fugiat.</string>
    <string name="fotodesc">Dok.jawapos</string>
    <string name="jawapos">Jawapos</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="reporter">Salim Maula - jawaPos</string>
    <string name="posttime">11 Agustus 2020 12:40 wib</string>
    <string name="bacajuga">Baca Juga Judul Berita Terkait</string>
</resources>