<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <!--region Header-->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="168dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoutama"/>

    <ImageView
        android:id="@+id/image_search"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo"
        app:layout_constraintEnd_toStartOf="@+id/cardview"
        app:layout_constraintTop_toTopOf="@+id/img_logo"
        app:srcCompat="@drawable/ic_search" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintTop_toTopOf="@id/img_logo"
        app:layout_constraintBottom_toBottomOf="@id/img_logo"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/var_contdesc"
            android:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>
    <!--endregion-->

    <!--region MenuTop-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/terbaru"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/seputar_berita"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/covid_19"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/kabar_luar"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:layout_weight="1"
            android:text="@string/sport"
            android:textColor="@color/text"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <!--endregion-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_MenuTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <!--region Berita Headline-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cdv_newsheadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/img_news0"
                    android:layout_width="375dp"
                    android:layout_height="257dp"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:layout_gravity="bottom"
                    android:background="@color/text"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvw_TitleHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/judul_headline"
                        android:textColor="@color/back_text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvw_DescHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="7sp"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/deskripsi_headline"
                        android:textColor="#EDEDED" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!--endregion-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_daftarberita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cdv_newsheadline" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <!--region Bot Nav-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btn_menubotton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back_text"
        app:itemTextColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom" />




    <!--endregion-->




</androidx.constraintlayout.widget.ConstraintLayout>